# MyHTTPserver

./: CMakeLists.txt  README.md  appveyor.yml  mimetypes.csv
include/: Help.h  HttpUtil.h  Request.h  RequestForFile.h  RequestForString.h  Response.h  Server.h  filesystemrequesthandler.h  helprequesthandler.h  httprequest.h  httpresponse.h  httpserver.h  httputility.h  mimetypes.h  stringrequesthandler.h
src/: Help.cpp  Request.cpp  RequestForFile.cpp  RequestForString.cpp  Response.cpp  Server.cpp  filesystemrequesthandler.cpp  helprequesthandler.cpp  httprequest.cpp  httpresponse.cpp  httpserver.cpp  main.cpp  mimetypes.cpp  stringrequesthandler.cpp
